Fix [General] Long names are cropped

--- a/src/common/Breadcrumbs/breadcrums.scss
+++ b/src/common/Breadcrumbs/breadcrums.scss
@@ -20,6 +20,7 @@
 
   &__item {
     position: relative;
+    max-width: 700px;
     color: $topaz;
 
     &:last-child {
